# quikdecision_rust

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: coin_decide.rs  decision_iterator.rs  deck_decide.rs  dice_decide.rs  oracle_decide.rs  percent_decide.rs  pick_decide.rs  select_decide.rs  shuffle_decide.rs
src/: cards.rs  coin.rs  decision.rs  deck.rs  dice.rs  error.rs  help.rs  iterator.rs  lib.rs  main.rs  oracle.rs  percent.rs  pick.rs  select.rs  shuffle.rs
src/deck/: standard.rs  tarot.rs
