[package]
name = "quikdecision"
version = "0.7.1"
authors = ["G. Wade Johnson <gwadej@anomaly.org>"]
description = "Make random decisions using one of a few different methods."
readme = "README.md"
keywords = ["decisions", "random", "coin flip", "dice roll"]
categories = ["command-line-utilities", "games"]
license = "MIT"

[dependencies]

rand = "0.5.5"
regex = "1"
spectral = "0.6.0"
