[package]
name = "quikdecision"
version = "0.11.0"
authors = ["G. Wade Johnson <gwadej@anomaly.org>"]
description = "Make random decisions using one of a few different methods."
readme = "README.md"
keywords = ["decisions", "random", "coin flip", "dice roll"]
categories = ["command-line-utilities", "games"]
license = "MIT"
edition = "2018"

[dependencies]

rand = "0.6.1"
regex = "1"
spectral = "0.6.0"
numerals = "0.1.2"
